# crush

./: crush.json  flake.nix  go.mod  go.sum  irrelevant  main.go  schema.json
.claude-code-compat/: README.md  crush-token.ps1  crush-token.sh  crush.json  refresh-models.ps1
compressd/: .gitignore  Cargo.toml  README.md
compressd/src/: compress.rs  config.rs  lib.rs  main.rs  model.rs  protocol.rs  server.rs  transport.rs
compressd/tests/: model_integration.rs  server_integration.rs
compressd/tests/fixtures/: gen_fixtures.py  tiny_keep_score.onnx  tiny_tokenizer.json
docs/: antigravity-cli-oauth-findings.md  astgrep-design.md  background-tasks-design.md  bash-timeout-and-background.md  claude-code-comparison.md  debug-workflow-research.md  edit-eval-findings.md  hashline-design.md  memory-design.md
docs/hooks/: README.md
internal/agent/: agent.go  agent_status_tool.go  agent_test.go  agent_tool.go  agent_tool_test.go  agentic_fetch_tool.go  background_usage.go  cancel_tool.go  cancel_tool_test.go  cc_system_split.go  cc_system_split_test.go  common_test.go  compress_output.go  compress_output_coordinator_test.go  compress_output_test.go  coordinator.go  coordinator_test.go  edit_eval_test.go  hooked_tool.go  hooked_tool_test.go  loop_detection_test.go  memory_inject.go  memory_inject_test.go  memory_usage_test.go  plan_mode_tool.go  prompts.go  reconcile.go  reconcile_test.go  retry_progress.go  retry_progress_test.go  run_complete_test.go  schedule_registry.go  schedule_registry_test.go  schedule_tool.go  schedule_tool_test.go  stream_error_retry_test.go  subagent_readiness_test.go  subagent_registry.go  subagent_registry_test.go  task.go  (+11 more)
internal/app/: app.go  bash_progress_local_test.go  resolve_session_test.go  testing.go
internal/astgrep/: lang.go  lang_test.go  match.go  match_test.go  metavar.go  metavar_test.go  pattern.go  pattern_test.go  rewrite.go  rewrite_test.go  search.go  search_test.go  smoke_test.go
internal/backend/: accepted_run_integration_test.go  agent.go  agent_runcomplete_test.go  agent_test.go  permission.go  shell_command_test.go
internal/claudecode/: claudecode.go  models_test.go  usage.go  usage_test.go
internal/client/: proto.go
internal/cmd/: login.go  logout.go  restart_other.go  restart_other_test.go  restart_windows.go  root.go  session.go  tmux.go  usage.go
internal/compressd/: client.go  client_test.go  manager.go  manager_test.go  store.go  store_test.go
internal/config/: config.go  load.go  load_test.go  oauth_providers.go  store.go  thinking.go  (+3 more)
scripts/: edit-eval.py  omp-eval.py
(+576 files in other folders)
